fix: alignment of tosses

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -87,6 +87,10 @@ path.prev {
   z-index: -1;
 }
 
+.toss {
+  font-family: monospace;
+}
+
 .toss.heads {
   fill: red;
 }
